--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "parcel": "^2.8.2"
   },
   "devDependencies": {
+    "http-server": "^14.1.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.0",
     "process": "^0.11.10"
